# adbex

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  adbex_adbd.c  adbex_init.c  inject.c  ndk.cmake  prop_info.h  ptrace.c  ptrace.h  utils.c  utils.h
docs/: details.md
package/: .gitignore  customize.sh  module.prop  post-fs-data.sh  sepolicy.rule
